Re-brand of the entire extension.
FBConnect is now known as "Facebook for MediaWiki", or just "Facebook" for short.

No tests have been done so far. One naming conflict is known, between the main Facebook class and the Facebook sdk from GitHub.

--- a/FBConnect/css/fbModal.css
+++ b/FBConnect/css/fbModal.css
@@ -4,29 +4,29 @@
 	display: none;
 }
 
-.fbConnectPushEventBar {
+.facebookPushEventBar {
 	padding-right:30px;
 }
 
-.fbConnectPushEventBarlink{
+.facebookPushEventBarlink{
 	text-align:right;
 	padding-right:30px;
 }
 
-.fbConnectCblable {
+.facebookCblable {
 	margin-left:16px;
 }
 
-.fbConnectPushEventToggles td {
+.facebookPushEventToggles td {
 	padding-bottom:8px;
 	padding-top:0;
 }
 
-#fbConnectPushEventBar_show,#fbConnectPushEventBar_hide {
+#facebookPushEventBar_show,#facebookPushEventBar_hide {
 	font-size:80%;
 }
 
-#fbConnectModalWrapper #userloginErrorBox {
+#facebookModalWrapper #userloginErrorBox {
 	margin-bottom:0;
 	margin-left:10px;
 	width:565px;
